--- a/requirements.txt
+++ b/requirements.txt
@@ -67,6 +67,7 @@ pydeck==0.8.0
 Pygments==2.15.1
 pykakasi==2.2.1
 Pympler==1.0.1
+PyPDF2==3.0.1
 PyPika==0.48.9
 python-dateutil==2.8.2
 python-dotenv==1.0.0
